cardContents/about.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: sans-serif;
    height: 100vh;
    overflow: hidden;
}

.about-container {
    display: flex;
    height: 100vh;
    width: 100%;
}

/* LEFT IMAGE */
.image-section {
    height: 100vh;
}

.image-section img {
    height: 100%;
    width: auto;
    object-fit: cover;
}

/* RIGHT CONTENT */
.content-section {
    flex: 1;
    padding: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    flex-wrap: wrap;
    gap: 2vh;
    text-align: justify;
}

#description {
    width: fit-content;
    overflow-y: scroll;

    &::-webkit-scrollbar {
        display: none;
    }
}

/* TEXT STYLES */
#name {
    text-align: center;
    font-size: 5vw;
    width: fit-content;
}

#title {
    text-align: center;
    font-size: 2vw;
    color: #666;
    width: fit-content;
}

.bio {
    margin: 3vh 0;
    font-size: clamp(8px, 2vw, 2vw);
    line-height: 1.6;
    max-width: 40vw;
    width: fit-content;
}

/* INFO BLOCK */
.info {
    margin-top: 2vh;
    display: flex;
    flex-direction: column;
    gap: 1vh;
    font-size: clamp(6px, 1.5vw, 1.5vw);
    width: fit-content;
}

